--- a/03/index.html
+++ b/03/index.html
@@ -726,8 +726,10 @@
                     <img src="img/w3newbie-logo.png" alt="" />
                     <p class="footer">Lorem ipsum dolor sit amet.</p>
                     <br />
-                    <p>&copy; blq blq 2023</p>
-                    <a href="#">UNSUBSCRIBE</a>
+                    <p class="footer">
+                      &copy; blq blq 2023 <br />
+                      <a href="#" class="footer">UNSUBSCRIBE</a>
+                    </p>
                   </td>
                 </tr>
               </table>
