--- a/07-3-card/Title + 3 cards.html
+++ b/07-3-card/Title + 3 cards.html
@@ -280,7 +280,7 @@
                               </table>
                             </td>
                           </tr>
-                          <!-- END ofH1 And body -->
+                          <!-- END of H1 And body -->
 
                           <!-- Divider: -->
                           <tr>
@@ -319,6 +319,7 @@
                                       cellspacing="0"
                                     >
                                       <tr>
+                                        <!-- 01 Card -->
                                         <td
                                           align="center"
                                           width="31%"
@@ -369,6 +370,7 @@
                                                     ></td>
                                                   </tr>
                                                   <tr>
+                                                    <!-- 01 Card -->
                                                     <td width="100%">
                                                       <table
                                                         width="100%"
@@ -573,6 +575,9 @@
                                             </tr>
                                           </table>
                                         </td>
+                                        <!-- END of 01 card -->
+
+                                        <!-- Divider vertical -->
                                         <td
                                           class="stack-column-center"
                                           height="16"
@@ -586,6 +591,9 @@
                                         >
                                            
                                         </td>
+                                        <!-- End of divider vertical -->
+
+                                        <!-- 02 Card -->
                                         <td
                                           align="center"
                                           width="31%"
@@ -838,6 +846,9 @@
                                             </tr>
                                           </table>
                                         </td>
+                                        <!-- End 02 Card -->
+
+                                        <!-- Divider vertical -->
                                         <td
                                           class="stack-column-center"
                                           height="16"
@@ -851,6 +862,8 @@
                                         >
                                            
                                         </td>
+                                        <!-- End of divider vertical -->
+                                        <!-- 03 Card -->
                                         <td
                                           align="center"
                                           width="31%"
@@ -871,6 +884,8 @@
                                                   cellspacing="0"
                                                 >
                                                   <tr>
+                                                    <!-- 03 Card -->
+
                                                     <td
                                                       width="173"
                                                       align="center"
@@ -1178,6 +1193,7 @@
                                             </tr>
                                           </table>
                                         </td>
+                                        <!-- END of 03 card -->
                                       </tr>
                                     </table>
                                   </td>
